# practicas5-8tsst

./: .gitignore
TSST_P5/: PR5_TSST.ipynb
TSST_P6/: PR6_TSST.ipynb  main.py  pyproject.toml
TSST_P7/: PR7_TSST.ipynb  data_download_onedrive_training_VAD.sh  data_download_onedrive_valid_VAD.sh  main.py  pyproject.toml  stocks_1yr.csv
TSST_P8/: PR8_TSST.ipynb  main.py  pyproject.toml
