[project]
name = "tsst-p7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.13.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
